[package]
name = "dev-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "^4.0", features = ["derive"] }
clap-verbosity-flag = "^2.0.0"
cynic = { version = "^2", features = ["reqwest", "http-reqwest"] }
chrono = { version = "^0.4", features = ["serde"] }
dirs = "4.0.0"
env_logger = "^0.9"
git2 = "0.15"
log = "^0.4"
prettytable-rs = "^0.7"
regex = "^1.7"
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.4.2"
walkdir = "2.3.2"
